--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,3 +1,5 @@
+@import "./colors.scss";
+
 :root {
 	--round-xs: 2px;
 	--round-s: 4px;
@@ -14,36 +16,423 @@
 	--padding-xl: 20px;
 	--padding-xxl: 24px;
 
-	--text-xxs: 10px;
-	--text-xs: 12px;
-	--text-s: 14px;
-	--text-m: 16px;
-	--text-l: 18px;
-	--text-xl: 20px;
-	--text-xxl: 24px;
-
-	--primary-bg: #eee;
-	--secondary-bg: #ddd;
-	--ternary-bg: #ccc;
-
-	--primary-text: #111;
-	--secondary-text: #333;
-	--ternary-text: #555;
-
-	--primary-color: blue;
-	--secondary-color: green;
-	--ternary-color: yellow;
-	--danger-color: red;
+	--base-00: #{$base-00-light};
+	--base-50: #{$base-50-light};
+	--base-100: #{$base-100-light};
+	--base-200: #{$base-200-light};
+	--base-300: #{$base-300-light};
+	--base-400: #{$base-400-light};
+	--base-500: #{$base-500-light};
+	--base-600: #{$base-600-light};
+	--base-700: #{$base-700-light};
+	--base-800: #{$base-800-light};
+	--base-900: #{$base-900-light};
+	--primary-50: #{$primary-50-light};
+	--primary-100: #{$primary-100-light};
+	--primary-200: #{$primary-200-light};
+	--primary-300: #{$primary-300-light};
+	--primary-400: #{$primary-400-light};
+	--primary-500: #{$primary-500-light};
+	--primary-600: #{$primary-600-light};
+	--primary-700: #{$primary-700-light};
+	--primary-800: #{$primary-800-light};
+	--primary-900: #{$primary-900-light};
+	--secondary-50: #{$secondary-50-light};
+	--secondary-100: #{$secondary-100-light};
+	--secondary-200: #{$secondary-200-light};
+	--secondary-300: #{$secondary-300-light};
+	--secondary-400: #{$secondary-400-light};
+	--secondary-500: #{$secondary-500-light};
+	--secondary-600: #{$secondary-600-light};
+	--secondary-700: #{$secondary-700-light};
+	--secondary-800: #{$secondary-800-light};
+	--secondary-900: #{$secondary-900-light};
+	--tertiary-50: #{$tertiary-50-light};
+	--tertiary-100: #{$tertiary-100-light};
+	--tertiary-200: #{$tertiary-200-light};
+	--tertiary-300: #{$tertiary-300-light};
+	--tertiary-400: #{$tertiary-400-light};
+	--tertiary-500: #{$tertiary-500-light};
+	--tertiary-600: #{$tertiary-600-light};
+	--tertiary-700: #{$tertiary-700-light};
+	--tertiary-800: #{$tertiary-800-light};
+	--tertiary-900: #{$tertiary-900-light};
+	--success-50: #{$success-50-light};
+	--success-100: #{$success-100-light};
+	--success-200: #{$success-200-light};
+	--success-300: #{$success-300-light};
+	--success-400: #{$success-400-light};
+	--success-500: #{$success-500-light};
+	--success-600: #{$success-600-light};
+	--success-700: #{$success-700-light};
+	--success-800: #{$success-800-light};
+	--success-900: #{$success-900-light};
+	--warning-50: #{$warning-50-light};
+	--warning-100: #{$warning-100-light};
+	--warning-200: #{$warning-200-light};
+	--warning-300: #{$warning-300-light};
+	--warning-400: #{$warning-400-light};
+	--warning-500: #{$warning-500-light};
+	--warning-600: #{$warning-600-light};
+	--warning-700: #{$warning-700-light};
+	--warning-800: #{$warning-800-light};
+	--warning-900: #{$warning-900-light};
+	--highlight-50: #{$highlight-50-light};
+	--highlight-100: #{$highlight-100-light};
+	--highlight-200: #{$highlight-200-light};
+	--highlight-300: #{$highlight-300-light};
+	--highlight-400: #{$highlight-400-light};
+	--highlight-500: #{$highlight-500-light};
+	--highlight-600: #{$highlight-600-light};
+	--highlight-700: #{$highlight-700-light};
+	--highlight-800: #{$highlight-800-light};
+	--highlight-900: #{$highlight-900-light};
+	--blue-gray-50: #{$blue-gray-50-light};
+	--blue-gray-100: #{$blue-gray-100-light};
+	--blue-gray-200: #{$blue-gray-200-light};
+	--blue-gray-300: #{$blue-gray-300-light};
+	--blue-gray-400: #{$blue-gray-400-light};
+	--blue-gray-500: #{$blue-gray-500-light};
+	--blue-gray-600: #{$blue-gray-600-light};
+	--blue-gray-700: #{$blue-gray-700-light};
+	--blue-gray-800: #{$blue-gray-800-light};
+	--blue-gray-900: #{$blue-gray-900-light};
+	--bronze-50: #{$bronze-50-light};
+	--bronze-100: #{$bronze-100-light};
+	--bronze-200: #{$bronze-200-light};
+	--bronze-300: #{$bronze-300-light};
+	--bronze-400: #{$bronze-400-light};
+	--bronze-500: #{$bronze-500-light};
+	--bronze-600: #{$bronze-600-light};
+	--bronze-700: #{$bronze-700-light};
+	--bronze-800: #{$bronze-800-light};
+	--bronze-900: #{$bronze-900-light};
+	--cyan-50: #{$cyan-50-light};
+	--cyan-100: #{$cyan-100-light};
+	--cyan-200: #{$cyan-200-light};
+	--cyan-300: #{$cyan-300-light};
+	--cyan-400: #{$cyan-400-light};
+	--cyan-500: #{$cyan-500-light};
+	--cyan-600: #{$cyan-600-light};
+	--cyan-700: #{$cyan-700-light};
+	--cyan-800: #{$cyan-800-light};
+	--cyan-900: #{$cyan-900-light};
+	--emerald-50: #{$emerald-50-light};
+	--emerald-100: #{$emerald-100-light};
+	--emerald-200: #{$emerald-200-light};
+	--emerald-300: #{$emerald-300-light};
+	--emerald-400: #{$emerald-400-light};
+	--emerald-500: #{$emerald-500-light};
+	--emerald-600: #{$emerald-600-light};
+	--emerald-700: #{$emerald-700-light};
+	--emerald-800: #{$emerald-800-light};
+	--emerald-900: #{$emerald-900-light};
+	--fuchsia-50: #{$fuchsia-50-light};
+	--fuchsia-100: #{$fuchsia-100-light};
+	--fuchsia-200: #{$fuchsia-200-light};
+	--fuchsia-300: #{$fuchsia-300-light};
+	--fuchsia-400: #{$fuchsia-400-light};
+	--fuchsia-500: #{$fuchsia-500-light};
+	--fuchsia-600: #{$fuchsia-600-light};
+	--fuchsia-700: #{$fuchsia-700-light};
+	--fuchsia-800: #{$fuchsia-800-light};
+	--fuchsia-900: #{$fuchsia-900-light};
+	--indigo-50: #{$indigo-50-light};
+	--indigo-100: #{$indigo-100-light};
+	--indigo-200: #{$indigo-200-light};
+	--indigo-300: #{$indigo-300-light};
+	--indigo-400: #{$indigo-400-light};
+	--indigo-500: #{$indigo-500-light};
+	--indigo-600: #{$indigo-600-light};
+	--indigo-700: #{$indigo-700-light};
+	--indigo-800: #{$indigo-800-light};
+	--indigo-900: #{$indigo-900-light};
+	--light-blue-50: #{$light-blue-50-light};
+	--light-blue-100: #{$light-blue-100-light};
+	--light-blue-200: #{$light-blue-200-light};
+	--light-blue-300: #{$light-blue-300-light};
+	--light-blue-400: #{$light-blue-400-light};
+	--light-blue-500: #{$light-blue-500-light};
+	--light-blue-600: #{$light-blue-600-light};
+	--light-blue-700: #{$light-blue-700-light};
+	--light-blue-800: #{$light-blue-800-light};
+	--light-blue-900: #{$light-blue-900-light};
+	--lime-50: #{$lime-50-light};
+	--lime-100: #{$lime-100-light};
+	--lime-200: #{$lime-200-light};
+	--lime-300: #{$lime-300-light};
+	--lime-400: #{$lime-400-light};
+	--lime-500: #{$lime-500-light};
+	--lime-600: #{$lime-600-light};
+	--lime-700: #{$lime-700-light};
+	--lime-800: #{$lime-800-light};
+	--lime-900: #{$lime-900-light};
+	--metal-50: #{$metal-50-light};
+	--metal-100: #{$metal-100-light};
+	--metal-200: #{$metal-200-light};
+	--metal-300: #{$metal-300-light};
+	--metal-400: #{$metal-400-light};
+	--metal-500: #{$metal-500-light};
+	--metal-600: #{$metal-600-light};
+	--metal-700: #{$metal-700-light};
+	--metal-800: #{$metal-800-light};
+	--metal-900: #{$metal-900-light};
+	--orange-50: #{$orange-50-light};
+	--orange-200: #{$orange-200-light};
+	--orange-400: #{$orange-400-light};
+	--pink-50: #{$pink-50-light};
+	--pink-100: #{$pink-100-light};
+	--pink-200: #{$pink-200-light};
+	--pink-300: #{$pink-300-light};
+	--pink-400: #{$pink-400-light};
+	--pink-500: #{$pink-500-light};
+	--pink-600: #{$pink-600-light};
+	--pink-700: #{$pink-700-light};
+	--pink-800: #{$pink-800-light};
+	--pink-900: #{$pink-900-light};
+	--rose-50: #{$rose-50-light};
+	--rose-100: #{$rose-100-light};
+	--rose-200: #{$rose-200-light};
+	--rose-300: #{$rose-300-light};
+	--rose-400: #{$rose-400-light};
+	--rose-500: #{$rose-500-light};
+	--rose-600: #{$rose-600-light};
+	--rose-700: #{$rose-700-light};
+	--rose-800: #{$rose-800-light};
+	--rose-900: #{$rose-900-light};
+	--teal-50: #{$teal-50-light};
+	--teal-100: #{$teal-100-light};
+	--teal-200: #{$teal-200-light};
+	--teal-300: #{$teal-300-light};
+	--teal-400: #{$teal-400-light};
+	--teal-500: #{$teal-500-light};
+	--teal-600: #{$teal-600-light};
+	--teal-700: #{$teal-700-light};
+	--teal-800: #{$teal-800-light};
+	--teal-900: #{$teal-900-light};
+	--violet-50: #{$violet-50-light};
+	--violet-100: #{$violet-100-light};
+	--violet-200: #{$violet-200-light};
+	--violet-300: #{$violet-300-light};
+	--violet-400: #{$violet-400-light};
+	--violet-500: #{$violet-500-light};
+	--violet-600: #{$violet-600-light};
+	--violet-700: #{$violet-700-light};
+	--violet-800: #{$violet-800-light};
+	--violet-900: #{$violet-900-light};
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--primary-bg: #111;
-		--secondary-bg: #222;
-		--ternary-bg: #333;
-
-		--primary-text: #eee;
-		--secondary-text: #ccc;
-		--ternary-text: #aaa;
+		--base-00: #{$base-00-dark};
+		--base-50: #{$base-50-dark};
+		--base-100: #{$base-100-dark};
+		--base-200: #{$base-200-dark};
+		--base-300: #{$base-300-dark};
+		--base-400: #{$base-400-dark};
+		--base-500: #{$base-500-dark};
+		--base-600: #{$base-600-dark};
+		--base-700: #{$base-700-dark};
+		--base-800: #{$base-800-dark};
+		--base-900: #{$base-900-dark};
+		--primary-50: #{$primary-50-dark};
+		--primary-100: #{$primary-100-dark};
+		--primary-200: #{$primary-200-dark};
+		--primary-300: #{$primary-300-dark};
+		--primary-400: #{$primary-400-dark};
+		--primary-500: #{$primary-500-dark};
+		--primary-600: #{$primary-600-dark};
+		--primary-700: #{$primary-700-dark};
+		--primary-800: #{$primary-800-dark};
+		--primary-900: #{$primary-900-dark};
+		--secondary-50: #{$secondary-50-dark};
+		--secondary-100: #{$secondary-100-dark};
+		--secondary-200: #{$secondary-200-dark};
+		--secondary-300: #{$secondary-300-dark};
+		--secondary-400: #{$secondary-400-dark};
+		--secondary-500: #{$secondary-500-dark};
+		--secondary-600: #{$secondary-600-dark};
+		--secondary-700: #{$secondary-700-dark};
+		--secondary-800: #{$secondary-800-dark};
+		--secondary-900: #{$secondary-900-dark};
+		--tertiary-50: #{$tertiary-50-dark};
+		--tertiary-100: #{$tertiary-100-dark};
+		--tertiary-200: #{$tertiary-200-dark};
+		--tertiary-300: #{$tertiary-300-dark};
+		--tertiary-400: #{$tertiary-400-dark};
+		--tertiary-500: #{$tertiary-500-dark};
+		--tertiary-600: #{$tertiary-600-dark};
+		--tertiary-700: #{$tertiary-700-dark};
+		--tertiary-800: #{$tertiary-800-dark};
+		--tertiary-900: #{$tertiary-900-dark};
+		--success-50: #{$success-50-dark};
+		--success-100: #{$success-100-dark};
+		--success-200: #{$success-200-dark};
+		--success-300: #{$success-300-dark};
+		--success-400: #{$success-400-dark};
+		--success-500: #{$success-500-dark};
+		--success-600: #{$success-600-dark};
+		--success-700: #{$success-700-dark};
+		--success-800: #{$success-800-dark};
+		--success-900: #{$success-900-dark};
+		--warning-50: #{$warning-50-dark};
+		--warning-100: #{$warning-100-dark};
+		--warning-200: #{$warning-200-dark};
+		--warning-300: #{$warning-300-dark};
+		--warning-400: #{$warning-400-dark};
+		--warning-500: #{$warning-500-dark};
+		--warning-600: #{$warning-600-dark};
+		--warning-700: #{$warning-700-dark};
+		--warning-800: #{$warning-800-dark};
+		--warning-900: #{$warning-900-dark};
+		--highlight-50: #{$highlight-50-dark};
+		--highlight-100: #{$highlight-100-dark};
+		--highlight-200: #{$highlight-200-dark};
+		--highlight-300: #{$highlight-300-dark};
+		--highlight-400: #{$highlight-400-dark};
+		--highlight-500: #{$highlight-500-dark};
+		--highlight-600: #{$highlight-600-dark};
+		--highlight-700: #{$highlight-700-dark};
+		--highlight-800: #{$highlight-800-dark};
+		--highlight-900: #{$highlight-900-dark};
+		--blue-gray-50: #{$blue-gray-50-dark};
+		--blue-gray-100: #{$blue-gray-100-dark};
+		--blue-gray-200: #{$blue-gray-200-dark};
+		--blue-gray-300: #{$blue-gray-300-dark};
+		--blue-gray-400: #{$blue-gray-400-dark};
+		--blue-gray-500: #{$blue-gray-500-dark};
+		--blue-gray-600: #{$blue-gray-600-dark};
+		--blue-gray-700: #{$blue-gray-700-dark};
+		--blue-gray-800: #{$blue-gray-800-dark};
+		--blue-gray-900: #{$blue-gray-900-dark};
+		--bronze-50: #{$bronze-50-dark};
+		--bronze-100: #{$bronze-100-dark};
+		--bronze-200: #{$bronze-200-dark};
+		--bronze-300: #{$bronze-300-dark};
+		--bronze-400: #{$bronze-400-dark};
+		--bronze-500: #{$bronze-500-dark};
+		--bronze-600: #{$bronze-600-dark};
+		--bronze-700: #{$bronze-700-dark};
+		--bronze-800: #{$bronze-800-dark};
+		--bronze-900: #{$bronze-900-dark};
+		--cyan-50: #{$cyan-50-dark};
+		--cyan-100: #{$cyan-100-dark};
+		--cyan-200: #{$cyan-200-dark};
+		--cyan-300: #{$cyan-300-dark};
+		--cyan-400: #{$cyan-400-dark};
+		--cyan-500: #{$cyan-500-dark};
+		--cyan-600: #{$cyan-600-dark};
+		--cyan-700: #{$cyan-700-dark};
+		--cyan-800: #{$cyan-800-dark};
+		--cyan-900: #{$cyan-900-dark};
+		--emerald-50: #{$emerald-50-dark};
+		--emerald-100: #{$emerald-100-dark};
+		--emerald-200: #{$emerald-200-dark};
+		--emerald-300: #{$emerald-300-dark};
+		--emerald-400: #{$emerald-400-dark};
+		--emerald-500: #{$emerald-500-dark};
+		--emerald-600: #{$emerald-600-dark};
+		--emerald-700: #{$emerald-700-dark};
+		--emerald-800: #{$emerald-800-dark};
+		--emerald-900: #{$emerald-900-dark};
+		--fuchsia-50: #{$fuchsia-50-dark};
+		--fuchsia-100: #{$fuchsia-100-dark};
+		--fuchsia-200: #{$fuchsia-200-dark};
+		--fuchsia-300: #{$fuchsia-300-dark};
+		--fuchsia-400: #{$fuchsia-400-dark};
+		--fuchsia-500: #{$fuchsia-500-dark};
+		--fuchsia-600: #{$fuchsia-600-dark};
+		--fuchsia-700: #{$fuchsia-700-dark};
+		--fuchsia-800: #{$fuchsia-800-dark};
+		--fuchsia-900: #{$fuchsia-900-dark};
+		--indigo-50: #{$indigo-50-dark};
+		--indigo-100: #{$indigo-100-dark};
+		--indigo-200: #{$indigo-200-dark};
+		--indigo-300: #{$indigo-300-dark};
+		--indigo-400: #{$indigo-400-dark};
+		--indigo-500: #{$indigo-500-dark};
+		--indigo-600: #{$indigo-600-dark};
+		--indigo-700: #{$indigo-700-dark};
+		--indigo-800: #{$indigo-800-dark};
+		--indigo-900: #{$indigo-900-dark};
+		--light-blue-50: #{$light-blue-50-dark};
+		--light-blue-100: #{$light-blue-100-dark};
+		--light-blue-200: #{$light-blue-200-dark};
+		--light-blue-300: #{$light-blue-300-dark};
+		--light-blue-400: #{$light-blue-400-dark};
+		--light-blue-500: #{$light-blue-500-dark};
+		--light-blue-600: #{$light-blue-600-dark};
+		--light-blue-700: #{$light-blue-700-dark};
+		--light-blue-800: #{$light-blue-800-dark};
+		--light-blue-900: #{$light-blue-900-dark};
+		--lime-50: #{$lime-50-dark};
+		--lime-100: #{$lime-100-dark};
+		--lime-200: #{$lime-200-dark};
+		--lime-300: #{$lime-300-dark};
+		--lime-400: #{$lime-400-dark};
+		--lime-500: #{$lime-500-dark};
+		--lime-600: #{$lime-600-dark};
+		--lime-700: #{$lime-700-dark};
+		--lime-800: #{$lime-800-dark};
+		--lime-900: #{$lime-900-dark};
+		--metal-100: #{$metal-100-dark};
+		--metal-200: #{$metal-200-dark};
+		--metal-300: #{$metal-300-dark};
+		--metal-400: #{$metal-400-dark};
+		--metal-500: #{$metal-500-dark};
+		--metal-600: #{$metal-600-dark};
+		--metal-700: #{$metal-700-dark};
+		--metal-800: #{$metal-800-dark};
+		--metal-900: #{$metal-900-dark};
+		--orange-50: #{$orange-50-dark};
+		--orange-100: #{$orange-100-dark};
+		--orange-200: #{$orange-200-dark};
+		--orange-300: #{$orange-300-dark};
+		--orange-400: #{$orange-400-dark};
+		--orange-500: #{$orange-500-dark};
+		--orange-600: #{$orange-600-dark};
+		--orange-700: #{$orange-700-dark};
+		--orange-800: #{$orange-800-dark};
+		--orange-900: #{$orange-900-dark};
+		--pink-50: #{$pink-50-dark};
+		--pink-100: #{$pink-100-dark};
+		--pink-200: #{$pink-200-dark};
+		--pink-300: #{$pink-300-dark};
+		--pink-400: #{$pink-400-dark};
+		--pink-500: #{$pink-500-dark};
+		--pink-600: #{$pink-600-dark};
+		--pink-700: #{$pink-700-dark};
+		--pink-800: #{$pink-800-dark};
+		--pink-900: #{$pink-900-dark};
+		--rose-50: #{$rose-50-dark};
+		--rose-100: #{$rose-100-dark};
+		--rose-200: #{$rose-200-dark};
+		--rose-300: #{$rose-300-dark};
+		--rose-400: #{$rose-400-dark};
+		--rose-500: #{$rose-500-dark};
+		--rose-600: #{$rose-600-dark};
+		--rose-700: #{$rose-700-dark};
+		--rose-800: #{$rose-800-dark};
+		--rose-900: #{$rose-900-dark};
+		--teal-50: #{$teal-50-dark};
+		--teal-100: #{$teal-100-dark};
+		--teal-200: #{$teal-200-dark};
+		--teal-300: #{$teal-300-dark};
+		--teal-400: #{$teal-400-dark};
+		--teal-500: #{$teal-500-dark};
+		--teal-600: #{$teal-600-dark};
+		--teal-700: #{$teal-700-dark};
+		--teal-800: #{$teal-800-dark};
+		--teal-900: #{$teal-900-dark};
+		--violet-50: #{$violet-50-dark};
+		--violet-100: #{$violet-100-dark};
+		--violet-200: #{$violet-200-dark};
+		--violet-300: #{$violet-300-dark};
+		--violet-400: #{$violet-400-dark};
+		--violet-500: #{$violet-500-dark};
+		--violet-600: #{$violet-600-dark};
+		--violet-700: #{$violet-700-dark};
+		--violet-800: #{$violet-800-dark};
+		--violet-900: #{$violet-900-dark};
 	}
 }
