--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,105 +9,118 @@
 	white-space: nowrap;
 	border-radius: var(--round-m);
 
-	//styleName: text-sm/font-semibold;
-	line-height: 20px;
-	letter-spacing: 0em;
-	text-align: center;
-
-	// default dynamics styles
-	color: var(--primary-text);
-	background: var(--primary-color);
-	padding: var(--padding-m) var(--padding-xl);
-
 	// Type styles
 	&[data-type="primary"] {
-		color: white;
-		background: var(--primary-color);
+		color: $base-00-light;
+		background: $primary-600-light;
 
 		&:hover {
-			filter: brightness(0.9);
+			background: $primary-700-light;
 		}
 		&:active {
-			filter: brightness(1.2);
+			background: $primary-500-light;
 		}
 		&:focus {
-			box-shadow: 0 0 0 2px var(--primary-bg), 0 0 0 4px var(--primary-color);
+			box-shadow: 0 0 0 2px var(--base-00), 0 0 0 4px $primary-600-light;
 		}
 		&:disabled {
-			background: #e1e7ef;
+			background: $blue-gray-200-light;
+			pointer-events: none;
 			cursor: not-allowed;
-			color: white;
 			opacity: 50%;
 		}
 	}
 
 	&[data-type="secondary"] {
-		background: transparent;
-		color: var(--secondary-text);
-		border: 2px solid var(--secondary-bg);
+		color: var(--base-900);
+		background: var(--tertiary-50);
+		border: 2px solid var(--tertiary-200);
+
+		&:hover {
+			background: var(--base-50);
+		}
+		&:active {
+			background: var(--base-100);
+			border-color: var(--tertiary-300);
+		}
+		&:focus {
+			box-shadow: 0 0 0 2px var(--base-00), 0 0 0 4px $primary-600-light;
+		}
+		&:disabled {
+			background: $blue-gray-200-light;
+			pointer-events: none;
+			cursor: not-allowed;
+			opacity: 50%;
+		}
 	}
 
 	&[data-type="ghost"] {
-		background: transparent;
-		color: var(--primary-color);
-		border: 2px solid var(--primary-color);
+		color: $primary-600-light;
+		background: var(--base-00);
+		border: 2px solid $primary-600-light;
 
 		&:hover {
-			filter: brightness(0.9);
+			box-shadow: 0 0 0 1px $primary-600-light;
 		}
 		&:active {
-			filter: brightness(1.2);
+			border-color: $primary-400-light;
 		}
 		&:focus {
-			box-shadow: 0 0 0 2px var(--primary-bg), 0 0 0 4px var(--primary-color);
+			box-shadow: 0 0 0 2px var(--base-00), 0 0 0 4px $primary-600-light;
 		}
 		&:disabled {
-			background: gray;
+			background: $blue-gray-200-light;
+			pointer-events: none;
 			cursor: not-allowed;
+			border: none;
+			opacity: 50%;
 		}
 	}
 
 	&[data-type="danger"] {
-		color: var(--primary-text);
-		background: var(--danger-color);
+		color: $base-00-light;
+		background: $warning-500-light;
 
 		&:hover {
-			filter: brightness(0.9);
+			background: $warning-600-light;
 		}
 		&:active {
-			filter: brightness(1.2);
+			background: $warning-700-light;
 		}
 		&:focus {
-			box-shadow: 0 0 0 2px var(--primary-bg), 0 0 0 4px var(--danger-color);
+			background: $warning-400-light;
+			box-shadow: 0 0 0 2px var(--primary-bg), 0 0 0 4px $warning-400-light;
 		}
 		&:disabled {
-			background: gray;
+			pointer-events: none;
 			cursor: not-allowed;
+			border: none;
+			opacity: 50%;
 		}
 	}
 
 	// Size styles
 	&[data-size="small"] {
-		font-size: 14px;
-		font-weight: 500;
 		padding: var(--padding-xs) var(--padding-m);
+		@include text-sm(500);
+		line-height: 22px;
 	}
 
 	&[data-size="default"] {
-		font-size: 16px;
-		font-weight: 500;
 		padding: var(--padding-s) var(--padding-l);
+		@include text-lg(500);
+		line-height: 24px;
 	}
 
 	&[data-size="medium"] {
-		font-size: 18px;
-		font-weight: 600;
 		padding: var(--padding-m) var(--padding-xl);
+		@include text-xl(600);
+		line-height: 26px;
 	}
 
 	&[data-size="large"] {
-		font-size: 20px;
-		font-weight: 600;
 		padding: var(--padding-l) var(--padding-xxl);
+		@include text-2xl(600);
+		line-height: 28px;
 	}
 }
